Checkout template partials

--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -1,18 +1,3 @@
 <div class="report-content">
-  <table>
-    <tbody>
-      <tr>
-        <td>Họ và tên</td>
-        <td>
-          {{fullName}}
-        </td>
-      </tr>
-      <tr>
-        <td>Giới tính</td>
-        <td>
-          {{gender}}
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  {{> userInfo}}
 </div>
