--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -1,4 +1,24 @@
-<div class="report container">
-  <div class="report brand"></div>
+<div class="container">
+  <div class="brand">
+    <img class="logo" src="/static/logo.png" />
+    <div class="company-info">
+      <strong class="title">Phong Thuỷ Tài Vận</strong>
+      <div class="address">
+        <strong>Địa chỉ: </strong>
+        <span>99 Quán Nam, Lê Chân, Hải Phòng</span>
+      </div>
+      <div class="digital-addresses">
+        <div class="address">
+          <strong>Hotline: </strong>
+          <a href="tel:+84886688656">088.6688.656</a>
+        </div>
+        <span class="separator">|</span>
+        <div class="address">
+          <strong>Facebook: </strong>
+          <a href="https://facebook.com/phongthuytaivan.vn">phongthuytaivan.vn</a>
+        </div>
+      </div>
+    </div>
+  </div>
   {{> userInfo}}
 </div>
