--- a/src/templates/user_info.html
+++ b/src/templates/user_info.html
@@ -1,7 +1,7 @@
-<table>
+<table class="user-info">
   <tbody>
     <tr>
-      <td>Họ và tên</td>
+      <td class="full-name">Họ và tên</td>
       <td>
         {{fullName}}
       </td>
