--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Myriad Pro', 'Helvetica Neue', sans-serif;
+  font-family: "Myriad Pro", "Helvetica Neue", sans-serif;
   text-align: center;
 }
 
@@ -13,7 +13,7 @@ body {
 
 .report .brand {
   align-items: center;
-  background: url('/static/bg.jpg') no-repeat center;
+  background: url("/static/bg.jpg") no-repeat center;
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
@@ -59,7 +59,15 @@ body {
   flex: 1;
   margin: 0 75px;
 
+  tr {
+    line-height: 30px;
+  }
+
   td {
     text-align: left;
+  }
+
+  td.label {
+    width: 125px;
   }
 }
