--- a/src/templates/user_info.html
+++ b/src/templates/user_info.html
@@ -1,16 +1,16 @@
 <table class="user-info">
   <tbody>
     <tr>
-      <td class="full-name">Họ và tên</td>
-      <td>
-        {{fullName}}
-      </td>
+      <td class="label"><strong>Họ và tên:</strong></td>
+      <td class="info">{{fullName}} ({{gender}})</td>
     </tr>
     <tr>
-      <td>Giới tính</td>
-      <td>
-        {{gender}}
-      </td>
+      <td class="label"><strong>Ngày sinh:</strong></td>
+      <td class="info">{{birthHour}}, ngày {{birthDay}}/{{birthMonth}}/{{birthYear}} (Dương lịch)</td>
+    </tr>
+    <tr>
+      <td class="label"><strong>Email/SĐT:</strong></td>
+      <td class="info">{{contactDetail}}</td>
     </tr>
   </tbody>
 </table>
