--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Myriad Pro";
+  src: url("/static/Myriad-Pro.ttf");
+}
+
 body {
   font-family: "Myriad Pro", "Helvetica Neue", sans-serif;
   text-align: center;
