--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="brand">
-    <img class="logo" src="/static/logo.png" />
+    <img class="logo" src="/static/images/logo.png" />
     <div class="company-info">
       <strong class="title">Phong Thuỷ Tài Vận</strong>
       <div class="address">
