--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -4,5 +4,9 @@
     <strong class="title">Luận giải lá số Tử vi</strong>
   </div>
   {{> userInfo}}
+  <div class="laso">
+    <div class="section-title"><strong>Lá số {{currentYear}}</strong></div>
+    <img src="{{lasoImage}}" />
+  </div>
   {{> footer}}
 </div>
