--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -72,7 +72,7 @@ body {
 }
 
 .report .header {
-  background-position: center;
+  background-position: -200px -450px;
 
   .logo {
     height: 75px;
