--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -8,5 +8,6 @@
     <div class="section-title"><strong>Lá số {{currentYear}}</strong></div>
     <img src="{{lasoImage}}" />
   </div>
+  {{> generals}}
   {{> footer}}
 </div>
