--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -3,11 +3,14 @@
     <img class="logo" src="/static/images/logo.png" />
     <strong class="title">Luận giải lá số Tử vi</strong>
   </div>
-  {{> userInfo}}
+  {{> clientInfo}}
   <div class="laso">
     <div class="section-title"><strong>Lá số {{currentYear}}</strong></div>
     <img src="{{lasoImage}}" />
   </div>
-  {{> generals}}
+  {{> generalReadings}}
+  {{> opportunities}}
+  {{> questions}}
+  <span class="eof">※※※</span>
   {{> footer}}
 </div>
