--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -4,10 +4,7 @@
     <strong class="title">Luận giải lá số Tử vi</strong>
   </div>
   {{> clientInfo}}
-  <div class="laso">
-    <div class="section-title"><strong>Lá số {{currentYear}}</strong></div>
-    <img src="{{lasoImage}}" />
-  </div>
+  {{> laso}}
   {{> generalReadings}}
   {{> opportunities}}
   {{> questions}}
