--- a/src/templates/chart_image.html
+++ b/src/templates/chart_image.html
@@ -1,4 +1,4 @@
-<div class="laso">
+<div class="chart">
   <div class="section-title"><strong>Lá số {{currentYear}}</strong></div>
-  <img src="{{lasoImage}}" />
+  <img src="{{chartImage}}" />
 </div>
