--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -4,7 +4,7 @@
     <strong class="title">Luận giải lá số Tử vi</strong>
   </div>
   {{> clientInfo}}
-  {{> laso}}
+  {{> chartImage}}
   {{> generalReadings}}
   {{> opportunities}}
   {{> questions}}
