--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,10 +9,16 @@
   src: url("/static/fonts/Myriad-Pro-Bold.ttf");
 }
 
+$bigPadding: 30mm;
+$normalPadding: 20mm;
+$smallPadding: 15mm;
+$tinyPadding: 5mm;
+$fontSize: 18pt;
+
 body {
   font-family: "Myriad Pro", "Helvetica Neue", sans-serif;
   text-align: center;
-  width: 850px;
+  width: 21cm;
 }
 
 .report {
@@ -23,7 +29,8 @@ body {
   border: 1px dotted lightgray;
   display: flex;
   flex-direction: column;
-  width: 850px;
+  // height: 29.7cm;
+  width: 21cm;
 }
 
 .wooden {
@@ -32,10 +39,10 @@ body {
   color: #d7b777;
   display: flex;
   justify-content: space-between;
-  padding: 45px 75px;
+  padding: $smallPadding $normalPadding;
 
   .title {
-    font-size: 18pt;
+    font-size: $fontSize;
   }
 
   a {
@@ -45,7 +52,7 @@ body {
 
 .eof {
   font-family: Arial; // stylelint-disable-line
-  font-size: 18pt;
+  font-size: $fontSize;
 }
 
 .company-info {
@@ -71,7 +78,7 @@ body {
 }
 
 .client-info table {
-  padding: 0 75px;
+  padding: 0 $normalPadding;
   width: 100%;
 
   tr {
@@ -83,19 +90,19 @@ body {
   }
 
   td.label {
-    width: 125px;
+    width: $bigPadding;
   }
 }
 
-.laso img {
-  margin: 0 75px;
+.chart img {
+  width: 13cm;
 }
 
 .section-title {
   background: url("/static/images/bg.jpg") no-repeat center;
   color: #d7b777;
   font-size: 13pt;
-  margin: 15px 0;
+  margin: $tinyPadding 0;
   padding-bottom: 3px;
   padding-top: 5px;
   text-transform: uppercase;
@@ -105,7 +112,7 @@ body {
   background-position: -200px -450px;
 
   .logo {
-    height: 75px;
+    height: $normalPadding;
   }
 
   .title {
@@ -115,7 +122,7 @@ body {
 
 .report .content {
   .text-block {
-    margin: 0 75px;
+    margin: 0 $normalPadding;
     text-align: justify;
   }
 }
@@ -123,7 +130,7 @@ body {
 .report .footer {
   background-position: top;
   justify-content: flex-end;
-  margin-top: 15px;
+  margin-top: $tinyPadding;
 }
 
 .loading-ring {
