--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -1,8 +1,5 @@
 <div class="container">
-  <div class="header wooden">
-    <img class="logo" src="/static/images/logo.png" />
-    <strong class="title">Luận giải lá số Tử vi</strong>
-  </div>
+  {{> header}}
   {{> clientInfo}}
   {{> chartImage}}
   {{> generalReadings}}
