--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -1,10 +1,18 @@
-<div class="container">
-  {{> header}}
-  {{> clientInfo}}
-  {{> chartImage}}
-  {{> generalReadings}}
-  {{> opportunities}}
-  {{> questions}}
-  <span class="eof">※※※</span>
-  {{> footer}}
-</div>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <title>{{ id }}</title>
+  </head>
+  <body>
+    <div class="report">
+      {{> header}}
+      {{> clientInfo}}
+      {{> chartImage}}
+      {{> generalReadings}}
+      {{> opportunities}}
+      {{> questions}}
+      <span class="eof">※※※</span>
+      {{> footer}}
+    </div>
+  </body>
+</html>
