--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="report.css" />
     <title>{{ id }}</title>
   </head>
   <body>
